# mozias-api

./: .gitignore  Cargo.toml  Rocket.toml
scripts/: wait-for-it.sh
src/: cors.rs  error.rs  main.rs  run.rs
src/db/: auth.rs  mod.rs  telemetry.rs
src/fairings/: mod.rs  telemetry.rs
src/model/: auth.rs  mod.rs  system.rs
src/routes/: auth.rs  mod.rs  system.rs
